fixing the overflowing of content creating a white space on the ride side of page on the home page(Culprit: main-container on the home page). Fixing the header to the top of the page.

--- a/src/styles/common/header.scss
+++ b/src/styles/common/header.scss
@@ -9,7 +9,7 @@
 
 //navbar header styles
 .header {
-  //margin-bottom: 30px;
+  margin-bottom: 30px;
   .navbar{
     border-radius: 0px;
   }
